// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<div
  aria-busy={true}
  className="container"
>
  <span
    className="uui-theme-loveship loadingWord animatedLoading"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
</div>
`;

exports[`TextPlaceholder should be rendered correctly with extra props 1`] = `
<div
  aria-busy={true}
  className="container"
>
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
  <span
    className="uui-theme-loveship loadingWord"
    dangerouslySetInnerHTML={
      Object {
        "__html": "0000000000000",
      }
    }
  />
</div>
`;
